<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.UpdateFragment">

    <EditText
        android:id="@+id/updateSiteInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:background="#00000000"
        android:gravity="center"
        android:hint="@string/site_app"
        app:layout_constraintBottom_toTopOf="@+id/updateUsernameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/updateUsernameInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="#00000000"
        android:gravity="center"
        android:hint="@string/username_email"
        app:layout_constraintBottom_toTopOf="@+id/updatePasswordInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateSiteInput"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionNext"/>


    <EditText
        android:id="@+id/updatePasswordInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="#00000000"
        android:gravity="center"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/updateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateUsernameInput"
        android:inputType="textVisiblePassword"
        android:maxLines="1"
        android:imeOptions="actionDone">
    </EditText>

    <androidx.cardview.widget.CardView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/updatePasswordInput"
        app:layout_constraintEnd_toEndOf="@+id/updatePasswordInput"
        app:layout_constraintTop_toTopOf="@+id/updatePasswordInput" >
        <ImageView
            android:id="@+id/strengthIndicator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"/>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_create_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatePasswordInput" />

    <Button
        android:id="@+id/copyUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_username"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/copyPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateButton" />

    <Button
        android:id="@+id/copyPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_password"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/copyUsername"
        app:layout_constraintTop_toBottomOf="@+id/updateButton" />



</androidx.constraintlayout.widget.ConstraintLayout>