<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".Fragments.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:backgroundTint="#332979FF"
                    android:background="@drawable/abs_history_playlist"
                    android:src="@drawable/ic_brightness_4_black_24dp"
                    app:tint="#2979FF"
                    tools:ignore="ObsoleteLayoutParam" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/dark_theme"
                        android:textSize="17sp"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/dark_there_or_light_theme" />

                </LinearLayout>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/darkThemeToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>



            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:layout_marginBottom="15dp"
                android:id="@+id/lockScreen"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:backgroundTint="#33D500F9"
                    android:background="@drawable/abs_history_playlist"
                    android:src="@drawable/ic_lock"
                    app:tint="#D500F9"
                    tools:ignore="ObsoleteLayoutParam" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/lock_application"
                        android:textSize="17sp"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:text="@string/asks_for_password_on_app_start" />

                </LinearLayout>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/appLockToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:layout_marginBottom="15dp"
                android:id="@+id/exportCsv"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:backgroundTint="#33FE7171"
                    android:background="@drawable/abs_history_playlist"
                    android:src="@drawable/ic_baseline_drive_folder_upload_100"
                    app:tint="#FF9292"
                    tools:ignore="ObsoleteLayoutParam" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="export"
                        android:textSize="17sp"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:text="save all password to csv/txt" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:layout_marginBottom="15dp"
                android:id="@+id/rateus"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:backgroundTint="#33FFAB00"
                    android:background="@drawable/abs_history_playlist"
                    android:src="@drawable/ic_baseline_star_half_100"
                    app:tint="#FFAB00"
                    tools:ignore="ObsoleteLayoutParam" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/rateus"
                        android:textSize="17sp"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:text="@string/kindly_rate_us_on_playstore" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:layout_marginBottom="15dp"
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:backgroundTint="#3300C853"
                    android:background="@drawable/abs_history_playlist"
                    android:src="@drawable/ic_baseline_alternate_email_100"
                    app:tint="#00C853"
                    tools:ignore="ObsoleteLayoutParam" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/feedback"
                        android:textSize="17sp"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:textAlignment="viewStart"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:text="help us improve" />

                </LinearLayout>


            </LinearLayout>


            <RelativeLayout
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginBottom="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/made_with_in"
                    android:textColor="#607d8b"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:text=""
        android:layout_gravity="bottom|center_horizontal" />
</LinearLayout>